# VERIDA

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_consent_reactions_comments_streaks.py
backend/scripts/: seed.py
backend/src/verida/: __init__.py  config.py  main.py
backend/src/verida/api/: __init__.py
backend/src/verida/api/v1/: auth.py  capture.py  circles.py  comments.py  consent.py  deps.py  feed.py  gdpr.py  posts.py  reactions.py  router.py  streaks.py
backend/src/verida/application/: __init__.py  ports.py
backend/src/verida/application/use_cases/: attestation.py  circles.py  comments.py  consent.py  daily_moment.py  email.py  feed.py  gdpr.py  reactions.py  streaks.py
backend/src/verida/domain/: __init__.py  entities.py
backend/src/verida/infrastructure/: __init__.py  email.py  heuristic_authenticity.py  rate_limit.py  security_headers.py  worker.py
backend/src/verida/infrastructure/db/: models.py  repositories.py  session.py
backend/tests/: conftest.py  test_auth.py  test_capture.py  test_circles.py  test_comments.py  test_consent.py  test_do_not_deploy_guard.py  test_email_verification.py  test_feed.py  test_gdpr.py  test_reactions.py  test_seed.py  test_streaks.py
docs/: BACKLOG.md  DATA_MAP.md  DEMO.md  ENGAGEMENT.md  PRIVACY.md  PROGRESS.md  ROADMAP.md  THREAT_MODEL.md  TOMs.md  TRUST_MODEL.md
docs/adr/: 001-clean-architecture.md  002-tech-stack.md  003-consent-model.md  004-frontend-architecture.md
frontend/: Dockerfile.dev  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx  serviceWorker.ts
frontend/src/api/: auth.ts  capture.ts  circles.ts  client.ts  comments.ts  consent.ts  feed.ts  gdpr.ts  profile.ts  reactions.ts
frontend/src/components/: AttestationBadge.tsx  CameraCapture.tsx  CommentSection.tsx  EmptyState.tsx  ErrorBoundary.tsx  Layout.tsx  PostCard.tsx  ReactionBar.tsx  SessionNudge.tsx  StreakBadge.tsx
frontend/src/pages/: ArchivePage.tsx  CapturePage.tsx  CirclesPage.tsx  FeedPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/src/store/: authStore.ts  feedStore.ts
scripts/: seed.py
