[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verida"
version = "0.1.0"
description = "VERIDA — Proof-of-Human Social Web"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "arq>=0.26.0",
    "structlog>=24.1.0",
    "pydantic-settings>=2.2.1",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "uuid6>=2022.10.25",
    "email-validator>=2.1.1",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.8",
    "httpx>=0.27.0",
    "faker>=25.0.0",
]

# Build context is ./backend — src/ is at the root of the context
[tool.setuptools.packages.find]
where = ["src"]
